# Solution-Challenge

./: .gitignore  README.md  docker-compose.yml  example.env  nginx.conf  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  seed.py  start.sh  test_req.py
backend/alembic/: env.py
backend/alembic/versions/: 20260428_0001_initial.py  20260429_0002_google_auth.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: route_helpers.py  router.py
backend/app/core/: config.py  database.py  errors.py  logging.py  rate_limit.py  redis.py  security.py
backend/app/middleware/: request_context.py
backend/app/models/: __init__.py  audit.py  base.py  dataset.py  enums.py  project.py  report.py  user.py
backend/app/schemas/: admin.py  audit.py  auth.py  common.py  dataset.py  notification.py  project.py  report.py
backend/app/services/: health.py
backend/app/services/audit/: __init__.py  service.py
backend/app/services/auth/: service.py
backend/app/services/bias_engine/: __init__.py  (+10 more)
backend/app/tasks/: celery_app.py  run_audit.py
backend/app/utils/: audit_log.py  pagination.py  response.py  sanitize.py  serialization.py
backend/fairsight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/fixtures/: adult_census_biased.csv  compas_subset.csv  malformed.csv  synthetic_balanced.csv
backend/tests/integration/: test_auth_flow.py  test_full_audit_flow.py  test_upload_validation.py
backend/tests/unit/: test_bias_engine.py  test_enums.py
(+97 files in other folders)
